--- a/main.html
+++ b/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="./styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+	
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
+	<h1 id='center'>Welcome to the new Era of Artificial intelligence". The text should be styled with white color</h1>
 </body>
 
 </html>
