--- a/main.html
+++ b/main.html
@@ -12,7 +12,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
 
-	<h1 id='center'>Welcome to the new Era of Artificial intelligence". The text should be styled with white color</h1>
+	<center>
+		<h1 id='center'>Welcome to the new Era of Artificial intelligence". The text should be styled with white color</h1>
+	</center>
 </body>
 
 </html>
